--- a/Utils/pom.xml
+++ b/Utils/pom.xml
@@ -14,10 +14,18 @@
             <version>4.0.1.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
     <build>
         <finalName>Utils</finalName>
         <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>tests</testSourceDirectory>
         <pluginManagement>
             <plugins>
                 <plugin>
