--- a/Utils/pom.xml
+++ b/Utils/pom.xml
@@ -25,7 +25,7 @@
     <build>
         <finalName>Utils</finalName>
         <sourceDirectory>src</sourceDirectory>
-        <testSourceDirectory>tests</testSourceDirectory>
+        <testSourceDirectory>tests/src</testSourceDirectory>
         <pluginManagement>
             <plugins>
                 <plugin>
