Table Editor UI

--- a/UITools/src/main/config/request_table.properties
+++ b/UITools/src/main/config/request_table.properties
@@ -5,5 +5,5 @@ on r.productID = d.productID \
 join productMaster m \
 on m.type = d.type
 
-columns=category genus variety size source request rweek
+columns=category
 
