--- a/UITools/src/main/config/request_table.properties
+++ b/UITools/src/main/config/request_table.properties
@@ -1,9 +1,24 @@
-query=select category, genus, variety, size, source, request, rWeek \
-from productRequest r \
-join productDetail d \
-on r.productID = d.productID \
-join productMaster m \
-on m.type = d.type
-
-columns=category
-
+#Created by net.thomasnardone.ui.table.TableEditor
+#Tue Jun 04 17:39:21 EDT 2013
+column.size.displayName=Size
+columns=category genus variety size source request rWeek
+column.request.editType=Text
+column.source.displayName=Source
+column.rWeek.dataType=Integer
+column.variety.displayName=Variety
+column.rWeek.editType=Combo
+column.source.dataType=String
+column.genus.dataType=String
+column.rWeek.displayName=Week
+column.category.displayName=Category
+column.source.editType=Read Only
+column.request.dataType=Integer
+column.genus.editType=Read Only
+column.category.dataType=String
+column.request.displayName=Request
+column.variety.dataType=String
+column.size.dataType=String
+column.category.editType=Read Only
+column.variety.editType=Read Only
+column.size.editType=Read Only
+column.genus.displayName=Genus
