Add query, sort props

--- a/UITools/src/main/config/request_table.properties
+++ b/UITools/src/main/config/request_table.properties
@@ -1,24 +1,25 @@
 #Created by net.thomasnardone.ui.table.TableEditor
-#Tue Jun 04 17:39:21 EDT 2013
-column.size.displayName=Size
-columns=category genus variety size source request rWeek
-column.request.editType=Text
-column.source.displayName=Source
-column.rWeek.dataType=Integer
-column.variety.displayName=Variety
-column.rWeek.editType=Combo
-column.source.dataType=String
-column.genus.dataType=String
-column.rWeek.displayName=Week
-column.category.displayName=Category
-column.source.editType=Read Only
-column.request.dataType=Integer
-column.genus.editType=Read Only
+#Wed Jun 05 16:16:36 EDT 2013
 column.category.dataType=String
-column.request.displayName=Request
-column.variety.dataType=String
-column.size.dataType=String
+column.category.displayName=Category
 column.category.editType=Read Only
-column.variety.editType=Read Only
-column.size.editType=Read Only
+column.genus.dataType=String
 column.genus.displayName=Genus
+column.genus.editType=Read Only
+column.rWeek.dataType=Integer
+column.rWeek.displayName=Week
+column.rWeek.editType=Combo
+column.request.dataType=Integer
+column.request.displayName=Request
+column.request.editType=Text
+column.size.dataType=String
+column.size.displayName=Size
+column.size.editType=Read Only
+column.source.dataType=String
+column.source.displayName=Source
+column.source.editType=Read Only
+column.variety.dataType=String
+column.variety.displayName=Variety
+column.variety.editType=Read Only
+columns=category genus variety size source request rWeek
+query=select category, genus, variety, size, source, request, rWeek\nfrom productRequest r\njoin productDetail d\non r.productID \= d.productID\njoin productMaster m\non m.type \= d.type
