--- a/UITools/src/main/config/request_table.properties
+++ b/UITools/src/main/config/request_table.properties
@@ -1,5 +1,5 @@
 #Created by net.thomasnardone.ui.table.TableEditor
-#Wed Jun 05 16:16:36 EDT 2013
+#Wed Jun 19 11:51:22 EDT 2013
 column.category.dataType=String
 column.category.displayName=Category
 column.category.editType=ReadOnly
@@ -22,4 +22,9 @@ column.variety.dataType=String
 column.variety.displayName=Variety
 column.variety.editType=ReadOnly
 columns=category genus variety size source request rWeek
+filter.category.type=Combo
+filter.genus.type=Text
+filter.row0=category
+filter.row1=genus
+filter.rows=2
 query=select category, genus, variety, size, source, request, rWeek\nfrom productRequest r\njoin productDetail d\non r.productID \= d.productID\njoin productMaster m\non m.type \= d.type
