--- a/UITools/src/main/config/request_table.properties
+++ b/UITools/src/main/config/request_table.properties
@@ -1,5 +1,5 @@
-#Created by net.thomasnardone.ui.table.TableEditor
-#Wed Jun 19 11:51:22 EDT 2013
+#Created by net.thomasnardone.ui.table.editor.TableEditor
+#Wed Jun 19 16:51:49 EDT 2013
 column.category.dataType=String
 column.category.displayName=Category
 column.category.editType=ReadOnly
@@ -24,7 +24,11 @@ column.variety.editType=ReadOnly
 columns=category genus variety size source request rWeek
 filter.category.type=Combo
 filter.genus.type=Text
-filter.row0=category
-filter.row1=genus
+filter.rWeek.type=Combo
+filter.row0=category genus variety 
+filter.row1=size source rWeek 
 filter.rows=2
+filter.size.type=Combo
+filter.source.type=Combo
+filter.variety.type=Text
 query=select category, genus, variety, size, source, request, rWeek\nfrom productRequest r\njoin productDetail d\non r.productID \= d.productID\njoin productMaster m\non m.type \= d.type
