Make source editable

--- a/UITools/src/main/config/request_table.properties
+++ b/UITools/src/main/config/request_table.properties
@@ -1,5 +1,5 @@
 #Created by net.thomasnardone.ui.table.editor.TableEditor
-#Wed Jun 19 16:51:49 EDT 2013
+#Thu Jun 20 13:56:45 EDT 2013
 column.category.dataType=String
 column.category.displayName=Category
 column.category.editType=ReadOnly
@@ -17,7 +17,7 @@ column.size.displayName=Size
 column.size.editType=ReadOnly
 column.source.dataType=String
 column.source.displayName=Source
-column.source.editType=ReadOnly
+column.source.editType=Combo
 column.variety.dataType=String
 column.variety.displayName=Variety
 column.variety.editType=ReadOnly
